--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.75.7",
     "next": "15.3.2",
+    "nextjs-toploader": "^3.8.16",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
